yaml to send email

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,3 +11,18 @@ spring:
   h2:
     console:
       enabled: true
+
+  mail:
+    default-encoding: UTF-8
+    host: smtp.gmail.com
+    username: <Gmail username>
+    password: <Gmail password>
+    port: 587
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+    protocol: smtp
+    test-connection: false
